# PathCopy

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check-and-lint.yaml  release.yaml  rust.yml
src/: lib.rs  main.rs
