[package]
name = "pc"
version = "0.2.1"
authors = ["Oliver Koch"]
description = "A cli command which copies the absolute Path of the given file or directory to the clipboard."
readme = "README.md"
repository = "https://github.com/oltoko/PathCopy"
license-file = "LICENSE"
edition = "2018"

[dependencies]
clipboard = "0.5"
clap = "2.33"
