[package]
name = "pc"
version = "0.3.0"
description = "Copies the absolute Path of the given file or directory to the clipboard. It follows symlinks and uses the absolute path of the linked file."
authors = ["Oliver Koch"]
repository = "https://github.com/oltoko/PathCopy"
license = "MIT"
keywords = ["cli", "clipboard"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clipboard = "0.5"
clap = { version = "4.5", features = ["derive"] }
